--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   easy_localization: ^3.0.7+1
+  flutter_native_splash: ^2.4.7
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +48,30 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  min_sdk_android: 21
+  image_path: "assets/images/talk_together_game_icon.png"
+  adaptive_icon_foreground: "assets/images/talk_together_game_icon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground_inset: 24
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/images/atmaze_logo_1152_px.png"
+  android: true
+  ios: true
+  web: false
+
+  android_12:
+    color: "#ffffff"
+    image: "assets/images/atmaze_logo_1152_px.png"
+
+  android_gravity: center
+  ios_content_mode: center
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
